Updated the Dockerfile for multi-stage build, templating and Ubuntu 22.04

--- a/kitchen-sink-debug/Dockerfile
+++ b/kitchen-sink-debug/Dockerfile
@@ -1,106 +1,48 @@
-FROM golang:1.10 as builder
+# Compile simple-server
+FROM golang:1.18 AS build-simple-server
 WORKDIR /go/src/github.com/markeijsermans/docker-debug/kitchen-sink-debug
-COPY simple-server.go .
-RUN go get -v .
+COPY simple-server.go go.mod go.sum ./
 RUN CGO_ENABLED=0 GOOS=linux go build -a -o simple-server .
 
-
-FROM ubuntu:16.04
-MAINTAINER Mark Eijsermans <mark.eijsermans@gmail.com>
-
+# Prepare a layer with all required utilities
+FROM ubuntu:22.04 AS template
 ADD sources.list /etc/apt/sources.list
-
+COPY packages.txt .
 RUN apt-get update && \
-  apt-get install -y \
-    bind9utils \
-    build-essential \
-    bzip2 \
-    coreutils \
-    cpustat \
-    curl \
-    diffutils \
-    dnsutils \
-    ethtool \
-    findutils \
-    gcc \
-    git \
-    gzip \
-    htop \
-    ifstat \
-    iftop \
-    iperf \
-    iproute2 \
-    iptables \
-    iptstate \
-    iputils-ping \
-    iputils-tracepath \
-    jq \
-    libbind-dev \
-    libcap-dev \
-    libgeoip-dev \
-    libkrb5-dev \
-    libnghttp2-dev \
-    libssl-dev \
-    libxml2-dev \
-    lsb-release \
-    lsof \
-    lynx \
-    make \
-    net-tools \
-    netcat-openbsd \
-    netperf \
-    nghttp2 \
-    openssh-client \
-    openssl \
-    procps \
-    socat \
-    strace \
-    sysstat \
-    tcpdump \
-    tree \
-    unzip \
-    vim \
-    wget \
-    xxdiff \
-  && apt-get clean
+  apt-get install $(cat packages.txt) -y && \
+  apt-get clean && \
+  rm packages.txt
 
-# install slow_cooker
-RUN	wget -q -O /usr/local/bin/slow_cooker https://github.com/BuoyantIO/slow_cooker/releases/download/1.1.0/slow_cooker_linux_amd64 && \
-  chmod 755 /usr/local/bin/slow_cooker
-
-# install wrk
-RUN	git clone https://github.com/wg/wrk.git /tmp/wrk && \
-  cd /tmp/wrk && \
-  make && \
-  mv wrk /usr/local/bin/wrk && \
-  cd / && \
-  rm -rf /tmp/wrk
-
-# install dnsperf
+# Compile dnsperf
+FROM template AS build-dnsperf
 RUN cd /tmp && \
-  curl ftp://ftp.nominum.com/pub/nominum/dnsperf/2.1.0.0/dnsperf-src-2.1.0.0-1.tar.gz -O && \
-  tar -xzf dnsperf-src-2.1.0.0-1.tar.gz && \
-  cd dnsperf-src-2.1.0.0-1 && \
+  curl https://www.dns-oarc.net/files/dnsperf/dnsperf-2.9.0.tar.gz -O && \
+  tar xf dnsperf-2.9.0.tar.gz && \
+  cd dnsperf-2.9.0 && \
   ./configure && \
   make && \
-  make install && \
-  cd / && \
-  rm -rf /tmp/dnsperf-src-2.1.0.0-1
+  make install
 
-# install curl with HTTP/2 support
-RUN cd /tmp && \
-  wget https://curl.haxx.se/download/curl-7.54.1.tar.bz2 && \
-  tar -xjf curl-7.54.1.tar.bz2 && \
-  cd curl-7.54.1 && \
+# Compile wrk
+FROM template AS build-wrk
+RUN git clone https://github.com/wg/wrk.git /tmp/wrk && \
+  cd /tmp/wrk && \
   make && \
-  make install && \
-  ldconfig && \
-  cd / && \
-  rm -rf /tmp/curl-7.54.1
+  mv wrk /usr/local/bin/wrk
 
-# add simple server
-COPY --from=builder /go/src/github.com/markeijsermans/docker-debug/kitchen-sink-debug/simple-server .
+# Setup final image
+FROM template AS final
+
+# Install slow_cooker
+RUN wget -O /usr/local/bin/slow_cooker https://github.com/BuoyantIO/slow_cooker/releases/download/1.2.0/slow_cooker_linux_amd64 && \
+  chmod 755 /usr/local/bin/slow_cooker
+
+# Install previously compiled binaries
+COPY --from=build-dnsperf /usr/local/bin* /usr/local/bin/
+COPY --from=build-simple-server /go/src/github.com/markeijsermans/docker-debug/kitchen-sink-debug/simple-server /usr/local/bin/
+COPY --from=build-wrk /usr/local/bin/wrk /usr/local/bin/
 
 # lets just set the TERM for `exec`ing into a container
 ENV TERM=xterm
 ADD .bashrc /root/.bashrc
+MAINTAINER Mark Eijsermans <mark.eijsermans@gmail.com>
